[project]
name = "analysis-tool"
version = "0.1.0"
description = "Basic tools for analysis my data"
authors = [{ name = "Ryuichi Arafune", email = "ryuichi.arafune@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"
ignore = [
  "ANN101",
  "S101",
  "G004",   # Logging statement uses f-string
  "PD011",  # pandas-use-of-dot-values
  "FBT002", # boolean-default-value-in-function-definition
]
select = ["ALL"]

[tool.pyright]

typeCheckingMode = "standard" # "off", "basic" "standard" "strict"

reportMissingTypeStubs = false
reportUnreachable = false
reportUnusedCallResult = false
